Closed
Bug 44434
Opened 26 years ago
Closed 26 years ago
width and height attributes appear to be mistyped
Categories
(Core :: DOM: Core & HTML, defect, P2)
Core
DOM: Core & HTML
Tracking
()
VERIFIED
FIXED
M17
People
(Reporter: mail, Assigned: jst)
Details
(Whiteboard: [nsbeta2+][HAVE FIX][ETA 7/11])
Attachments
(6 files)
Overview Description: JavaScript stores width and height attributes as numbers,
but the latest nightly builds fail to take stored width and height values in
rendering an image
Steps to Reproduce:
1) Create an image object in JavaScript and set its width and height (note that
setting them to strings will give an error message)
2) Create an image elements using the dom and then set the image width and
height to the values saved in the image object
3) appendChild() fails to display an image.
Actual Results:
Image does not appear
Expected Results:
Image should appear with stated width and height. This is a recent break as it
worked as expected in the M16 release, but has ben broken for over a week in the
nightlies.
Reproducibility:
Always
Build Date & Platform Bug Found:
20000629, WinNT
Additional Builds and Platforms Tested On:
20000701, Win2k, 2000062608
Works in M16 milestone build
Additional Information:
Testcases to follow
| Reporter | ||
Comment 1•26 years ago
|
||
| Reporter | ||
Comment 2•26 years ago
|
||
| Reporter | ||
Comment 3•26 years ago
|
||
| Reporter | ||
Comment 4•26 years ago
|
||
| Assignee | ||
Comment 5•26 years ago
|
||
| Assignee | ||
Comment 6•26 years ago
|
||
I just attached a fix for this problem, the problem is that mozilla never
returned the width&height (through img.width & img.height) of images that
weren't displayed (i.e. there's no frame for the image), I added code that gets
the width&height from the attributes if there's no frame to ask. Nominating for
nsbeta2, this fix is very low risk.
Status: UNCONFIRMED → ASSIGNED
Component: DOM Level 1 → DOM Level 0
Ever confirmed: true
Keywords: nsbeta2
OS: Windows NT → All
Priority: P3 → P2
Hardware: PC → All
Whiteboard: [HAVE FIX]
Target Milestone: --- → M17
Comment 7•26 years ago
|
||
Putting on [nsbeta2+] radar for beta2 fix.
Whiteboard: [HAVE FIX] → [nsbeta2+] [HAVE FIX]
| Assignee | ||
Updated•26 years ago
|
Whiteboard: [nsbeta2+] [HAVE FIX] → [nsbeta2+][HAVE FIX][ETA 7/11]
| Assignee | ||
Comment 8•26 years ago
|
||
The fix is in!
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 9•26 years ago
|
||
It works great... thanks
Comment 10•26 years ago
|
||
Dylan's exclamation above sure come close to a "verification" of the fix.
I would have done some verification if it was clearer how to interpret the "test
case" to tell if the fix is working.
Specifically: What constitutes failure in the test case? What constitutes
success in the test case?
Thanks,
Jim (trying to help) Roskind
p.s., The test case does produce a nice square, which rapidly vanishes leaving
only the text "blank" showing. I suspect that the goal is to see a square...
but I was not sure. It might be nicer if the square actually had some color, so
that it could be seen on the background after its outline (supplied during
progressive layout) vanished.
| Reporter | ||
Comment 11•26 years ago
|
||
The testcase needs access to an image file to work effectively... I could not
find a way to get Bugzilla to reference an uploaded image. Attached is a
better testcase as it attempts to stuff the mozilla.org logo into the box.
Failure in older builds resulted in no rendering of the image when the width
and height were set with the values stores in an Image() object. A "real
world" testcase is the navigation interface for
http://www.westcoastinternet.net Several of the graphics on that site display
only in versions after the fix was introduced (fail in 20000626, work in
20000801. Thanks, Dylan
| Reporter | ||
Comment 12•26 years ago
|
||
Comment 13•26 years ago
|
||
Verified on NT with build 2000080204 (M17 beta2 branch).
The logo gets stuffed into the box... and is visible.
You need to log in
before you can comment on or make changes to this bug.
Description
•