Fixing nsbeta2+ bug 44434, problems with width and height properties on preloaded images. r=vidur@netscape.com